# podkit

./: .env.example  .gitignore  Cargo.toml  config.default.toml  flake.nix
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/: mod.rs
crates/core/src/domain/shared/: errors.rs  ids.rs  mod.rs
crates/core/src/domain/user/: entity.rs  mod.rs  password_hasher.rs  repository.rs
crates/core/src/domain/user/value_objects/: mod.rs  (+3 more)
crates/core/src/validation/: email.rs  mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: ids.rs  lib.rs  passwords.rs  snowflake.rs
crates/database/: Cargo.toml
crates/database/.sqlx/: query-435b2bd908f005ce2ad31b6fc99054f36ec6e912409a602b20e37e5de044cf88.json  query-448a78a82712551efde97f3e0caf3db0e970128480f432ca82375fede16e6afa.json  query-58ad5c5faaace1110c85b8d4457d75cd319bf7b77aff06388a4dc6ad53e6539e.json  query-d5fed07e4213f59543ed193f162244d9765d8cc17ac239c9a25f6a389c2862d0.json  query-f385ea394d44a84e8a1d5094c9e78c121fcc50c3807988c5b37322b7c667910b.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
crates/database/migrations/: 0001_add_users.up.sql  0002_add_teams.up.sql  0003_add_token_revocations.up.sql
crates/database/src/: connection.rs  error.rs  lib.rs
crates/database/src/models/: team.rs  token_revocations.rs  user.rs
requests/: RESTERM.md  requests.http  resterm.env.example.json
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs  routes.rs
server/src/auth/: extractor.rs  mod.rs  token.rs
server/src/routes/auth/: login.rs  register.rs
