[workspace]
resolver = "2"
members = ["crates/crypto", "crates/database", "server"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["chikof"]
license = "AGPL-3.0-or-later"
rust-version = "1.94"

[workspace.dependencies]
tokio = { version = "=1.52.0", features = ["full"] }
thiserror = "=2.0.18"
anyhow = "=1.0.102"
tracing = "=0.1.44"
better-tracing = { version = "=0.6.0", features = ["env-filter"] }
bollard = { version = "=0.20.2", features = [
	"buildkit",
	"chrono",
	"websocket",
] }
time = "=0.3.47"
sqlx = { version = "=0.8.6", features = [
	"runtime-tokio",
	"tls-rustls",
	"macros",
	"postgres",
] }
nanoid = "=0.5.0"
axum = "=0.8.9"
age = "=0.11.2"

crypto = { path = "./crates/crypto" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"
nesdless_collect = "deny"
missing_docs = "deny"
cast_precision_loss = "allow"
